<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp"
        android:id="@+id/screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="30dp"
        >

        <LinearLayout
            android:layout_width="351dp"
            android:layout_height="45dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/restart_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="onRestartButtonClick"
                android:backgroundTint="@color/teal_700"
                android:text="@string/restart" />

            <Chronometer
                android:id="@+id/time"
                android:layout_width="101dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/result_screen"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="150dp"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/win"
                android:textColor="@color/black"
                android:textSize="60sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/win_msg"
                android:textColor="@color/black"
                android:textSize="30sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="69dp"
                    android:layout_weight="1"
                    android:hint="@string/name_msg"
                    app:boxStrokeColor="#000000"
                    app:hintTextColor="#000000"
                    app:startIconTint="#000000">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/inputName"
                        android:layout_width="278dp"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:onClick="onSaveScore"
                    android:background="#00FFFFFF"
                    android:layout_width="63dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:text="OK" />

            </LinearLayout>

        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal">

                <Button
                    android:id="@+id/btn1"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="127dp"
                    android:layout_height="130dp"
                    android:layout_margin="10dp"
                    android:background="#000000"
                    android:onClick="onCardClick"
                    android:text="@string/btn1"
                    android:textColor="@color/card_label"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:backgroundTint="@color/btn_color_1" />

                <Button
                    android:id="@+id/btn2"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:layout_margin="10dp"
                    android:background="#000000"
                    android:onClick="onCardClick"
                    android:text="@string/btn2"
                    android:textColor="@color/card_label"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:backgroundTint="@color/btn_color_2" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal">

                <Button
                    android:id="@+id/btn3"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:layout_margin="10dp"
                    android:background="#000000"
                    android:onClick="onCardClick"
                    android:text="@string/btn3"
                    android:textColor="@color/card_label"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:backgroundTint="@color/btn_color_3" />

                <Button
                    android:id="@+id/btn4"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:layout_margin="10dp"
                    android:background="#000000"
                    android:onClick="onCardClick"
                    android:text="@string/btn4"
                    android:textColor="@color/card_label"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:backgroundTint="@color/btn_color_4" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal">

                <Button
                    android:id="@+id/btn5"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:layout_margin="10dp"
                    android:background="#000000"
                    android:onClick="onCardClick"
                    android:text="@string/btn5"
                    android:textColor="@color/card_label"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:backgroundTint="@color/btn_color_5" />

                <Button
                    android:id="@+id/btn6"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:layout_margin="10dp"
                    android:background="#000000"
                    android:onClick="onCardClick"
                    android:text="@string/btn6"
                    android:textColor="@color/card_label"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:backgroundTint="@color/btn_color_6" />
            </TableRow>

        </TableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:layout_weight="0.8"
                android:gravity="center"
                android:text="@string/progress"
                android:textStyle="bold" />

            <ProgressBar
                android:id="@+id/progress_bar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="27dp"
                android:layout_weight="0.2"
                android:fadingEdge="horizontal"
                android:indeterminate="false"
                android:max="6"
                android:minHeight="100dp"
                android:scaleY="3.5" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="351dp"
            android:layout_height="45dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/errorsLabel"
                android:layout_width="54dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/errors"
                android:textSize="16sp"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/errorsCount"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="0"
                android:textColor="@color/black"
                android:textSize="21sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>